# flashlight

app/asr/: Train.cpp
flashlight/app/asr/: Decode.cpp  Test.cpp  Train.cpp
flashlight/app/asr/common/: Defines.cpp  Defines.h
flashlight/app/asr/decoder/: DecodeMaster.cpp  DecodeMaster.h  DecodeUtils.cpp  TranscriptionUtils.cpp  (+1 more)
flashlight/autograd/: Functions.cpp
flashlight/contrib/modules/: Transformer.cpp
flashlight/experimental/: CMakeLists.txt
flashlight/experimental/memory/: AllocationLogAnalyser.cpp  CMakeLists.txt  StandAloneOptimizer.cpp  StandAloneSimulator.cpp
flashlight/experimental/memory/allocator/: ConfigurableMemoryAllocator.cpp
flashlight/experimental/memory/allocator/freelist/: FreeList.cpp
flashlight/experimental/memory/optimizer/: HeuristicsOptimizer.cpp  Optimizer.cpp  Simulator.cpp
flashlight/experimental/tests/: CMakeLists.txt  FreeListTest.cpp  MemoryPoolTest.cpp
flashlight/fl/dataset/: MemoryBlobDataset.cpp  MemoryBlobDataset.h
libraries/common/: System.cpp
libraries/language/decoder/: LexiconFreeSeq2SeqDecoder.cpp
libraries/language/dictionary/: Dictionary.cpp
scripts/: CMakeLists.txt  LmAnalysis.cpp  OptimizeSortParams.cpp  Seq2SeqAnalysis.cpp  arch_stats.py  tensorboard.py
scripts/convLMSerializing/: Serialize.cpp  save_pytorch_model.py
scripts/fair_cluster/: w2l_fair_cluster_train.py
src/criterion/: Defines.h
src/decoder/: WordLMDecoder.cpp
src/experimental/: Align.cpp  AlignTest.cpp  AlignUtils.h  CMakeLists.txt  ForceAlignment.cpp  ForceAlignment.h  TARGETS
src/experimental/ConvLM/: CMakeLists.txt  Serialize.cpp  TARGETS  Utils.cpp
src/experimental/alignment/: README.md
src/experimental/augmentation/: AudioAugmenter.h
src/experimental/augmentation/test/: AudioAugmenterTest.cpp
src/experimental/compat/: Compat.h  TARGETS
src/experimental/frontend/: SqL2Pooling.cpp  TARGETS  Utils.h
src/experimental/frontend/test/: FrontendTest.cpp  TARGETS
src/experimental/lead2Gold/: CMakeLists.txt  ComputeStats.cpp  ComputewLER.cpp  Decode.cpp  FindScale1.cpp  FindScale2.cpp  FindScale3.cpp  FindScale3_old.cpp  Makefile  SaveExample.cpp  Test.cpp  Train.cpp  Train_ss.cpp  UpdateNoiselm.cpp  UpdateNoiselmNN.cpp  UpdateNoiselmNN_withX.cpp  cmake_install.cmake
src/experimental/lead2Gold/src/common/: CMakeLists.txt  Defines.cpp  Defines.h  Utils.cpp  Utils.h
src/experimental/lead2Gold/src/criterion/: CMakeLists.txt  criterion.h
src/experimental/lead2Gold/src/criterion/l2g/: AnalyseBeam.cpp  AnalyseBeam.h  AutoSegBeamNoiseCriterion.cpp  AutoSegBeamNoiseCriterion.h  CtcBeamNoiseCriterion.cpp  CtcBeamNoiseCriterion.h  CtcForceAlignBeamNoise.cpp  CtcForceAlignBeamNoise.h  EncDecCriterion.cpp  EncDecCriterion.h  EncDecCriterionMulti.cpp  EncDecCriterionMulti.h  ForceAlignBeamNoise.cpp  ForceAlignBeamNoise.h  ForceAlignBeamNoiseStats.cpp  ForceAlignBeamNoiseStats.h  Lead2Gold.h  NoiseLM.h  NoiseLMLetterSwapPretrain.cpp  NoiseLMLetterSwapPretrain.h  NoiseLMZero.h  NoiseTrie.cpp  NoiseTrie.h  TransformerBlock.cpp  TransformerBlock.h  TransformerBlockAttend.cpp  TransformerBlockAttend.h  TransformerBlockMultiAttend.cpp  TransformerBlockMultiAttend.h  TransformerBlockSimple.cpp  TransformerBlockSimple.h
src/experimental/lead2Gold/src/criterion/test/: CriterionTest_DEBUG_L2G.cpp  CriterionTest_L2G.cpp
src/experimental/lead2Gold/src/data/: CMakeLists.txt  Featurize.cpp  Featurize.h  NoiseW2lListFilesDataset.cpp  NoiseW2lListFilesDataset.h  Utils.cpp  Utils.h
src/experimental/lead2Gold/src/libraries/common/: CMakeLists.txt  Dictionary.cpp
src/experimental/lead2Gold/src/runtime/: CMakeLists.txt  Data.cpp  Data.h  DataScheduler.cpp  DataScheduler.h  Eval.cpp  Eval.h  Init.cpp  Init.h  Logger.cpp  Logger.h  Optimizer.cpp  Optimizer.h  runtime.h
src/experimental/lead2Gold/src/tests/: CMakeLists.txt
src/experimental/lmAnalysis/: DumpBeamSearch.cpp  DumpBeamSearchWithLm.cpp  LMAnalysis.cpp
src/experimental/localPriorMatch/: CMakeLists.txt  TARGETS  Train_lpm.cpp  Train_lpm_tied.cpp
src/experimental/localPriorMatch/src/module/: CMakeLists.txt  LMCritic.h
src/experimental/localPriorMatch/src/runtime/: Defines.cpp  Init.cpp  Init.h  TARGETS  Utils.cpp  Utils.h
src/experimental/localPriorMatchOss/: CMakeLists.txt  TARGETS  Train_lpm.cpp  Train_lpm_tied.cpp
src/experimental/localPriorMatchOss/src/module/: CMakeLists.txt  LMCritic.cpp  LMWrapper.cpp  TARGETS
src/experimental/localPriorMatchOss/src/runtime/: CMakeLists.txt  DataScheduler.cpp  Defines.cpp  Defines.h  Eval.cpp  Eval.h  Init.cpp  Init.h  Logging.cpp  Logging.h  TARGETS  Utils-inl.h  Utils.cpp  Utils.h  runtime.h
src/experimental/semisupervised/: CMakeLists.txt  TARGETS  Train.cpp
src/experimental/semisupervised/runtime/: DataScheduler.cpp  Defines.cpp  Defines.h  Eval.cpp  Eval.h  Init.cpp  Init.h  Logging.cpp  Logging.h  TARGETS  runtime.h
src/experimental/semisupervised/src/module/: CMakeLists.txt  LMCritic.cpp  LMCritic.h
src/experimental/semisupervised/src/runtime/: DataScheduler.cpp  DataScheduler.h  Defines.cpp  Defines.h  Eval.cpp  Eval.h  Init.cpp  Init.h  Logging.cpp  Logging.h  TARGETS  Utils.cpp  Utils.h
tasks/speech_recognition/: CMakeLists.txt  Train.cpp
tasks/speech_recognition/common/: CMakeLists.txt  Defines.cpp  Defines.h
tasks/speech_recognition/experimental/: CMakeLists.txt
tasks/speech_recognition/experimental/lmAnalysis/: CMakeLists.txt
tasks/speech_recognition/scripts/: ConvertModelFlags.cpp  hyperparameter_search.py  tb_writer.py
wav2letter/: CHANGELOG.md
wav2letter/scripts/: BenchmarkArch.cpp  CMakeLists.txt  launch_distributed_chronos.sh
wav2letter/src/experimental/: Align.cpp  AlignTest.cpp  TARGETS
wav2letter/src/experimental/localPriorMatch/src/runtime/: CMakeLists.txt  Defines.h  Eval.cpp  Init.cpp  Init.h  Logging.cpp  Logging.h  Utils-inl.h  Utils.cpp  Utils.h  runtime.h
wav2letter/src/experimental/semisupervised/: CMakeLists.txt  TARGETS
wav2letter/src/experimental/semisupervised/src/runtime/: CMakeLists.txt  DataScheduler.cpp  Defines.cpp  Init.h  TARGETS  Utils.cpp  Utils.h
(+48 files in other folders)
